--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+tekton-pipeline/ocp-projects/projects.yaml
 
 # Compiled source #
 ###################
